--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -114,32 +114,32 @@ const players = [
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
-  { id:3, name:'Álvaro', pos:'Portero', status:'Duda', performances:[
+  { id:3, name:'Álvaro', pos:'Portero', status:'OK', performances:[
     {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
     {points:null, minutes:36, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
   { id:4, name:'Luisja', pos:'Defensa', status:'OK', performances:[
     {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,2)'},
     {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
     {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
   { id:5, name:'J. Martínez', pos:'Atacante', status:'OK', performances:[
     {points:3, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,7)'},
     {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
     {points:9, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,3+⚽)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
   { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
   { id:7, name:'Jacobo', pos:'Defensa', status:'Lesionado', performances:[
@@ -149,56 +149,56 @@ const players = [
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
   ]},
   
-  { id:8, name:'Rodri', pos:'Defensa', status:'OK', performances:[
+  { id:8, name:'Rodri', pos:'Defensa', status:'Lesionado', performances:[
     {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
     {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
     {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
   ]},
   
   { id:9, name:'Adriano', pos:'Defensa', status:'Duda', performances:[
     {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
     {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
     {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
-  { id:10, name:'Á. Infante', pos:'Defensa', status:'Duda', performances:[
+  { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
   { id:11, name:'A. Molina', pos:'Centrocampista', status:'OK', performances:[
     {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
     {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
   ]},
   
   { id:12, name:'L. Lausín', pos:'Defensa', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:19, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
   ]},
   
   { id:13, name:'J. Zarcero', pos:'Defensa', status:'OK', performances:[
     {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:71, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
   ]},
   
   { id:14, name:'Kito', pos:'Centrocampista', status:'OK', performances:[
     {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
     {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:7, goals:0, assists:1, cards:1, comment:'🟨↪️🅰️ (7,2+🅰️)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
   ]},
   
-  { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', performances:[
+  { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'Duda', performances:[
     {points:2, minutes:21, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
     {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:4, minutes:63, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,8)'},
@@ -209,7 +209,7 @@ const players = [
     {points:7, minutes:72, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
     {points:null, minutes:75, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
     {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
   
   ]},
   
@@ -224,7 +224,7 @@ const players = [
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
     {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
   { id:19, name:'Mario', pos:'Centrocampista', status:'Duda', performances:[
@@ -238,7 +238,7 @@ const players = [
     {points:1, minutes:18, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
     {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
   { id:21, name:'Rodri de Castro', pos:'Atacante', status:'Lesionado', performances:[
@@ -252,14 +252,14 @@ const players = [
     {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
     {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:4, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,9)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
   ]},
   
   { id:23, name:'Manu Medina', pos:'Atacante', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
   ]},
   
   { id:24, name:'Manu de Vicente', pos:'Atacante', status:'Lesionado', performances:[
@@ -273,24 +273,25 @@ const players = [
     {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
     {points:null, minutes:90, goals:1, assists:0, cards:1, comment:'🟨⚽ (Sin grabación)'},
     {points:7, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽🅿️ (6,8+⚽🅿️)'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+    {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
   ]}
 ];
 
 // 📰 Noticias del equipo
 const news = [
+  { playerId: null, title: 'Jornada 3', text: "E.F.M.O. Boadilla 'B' 0-1 Puerta de Madrid 'B'" },
+  { playerId: 15, title: 'Duda', text: "Enfermedad, 1-2 semanas" },
+  { playerId: 8, title: 'Lesión', text: "Pubalgia, 2-3 semanas" },
   { playerId: 7, title: 'Lesión', text: "Molestias en los hombros, 2 semanas" },
   { playerId: 24, title: 'Lesión', text: "Edema óseo, 2-3 semanas" },
   { playerId: 9, title: 'Duda', text: "Molestias en el talón, 2-15 días" },
   { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo 4-2 E.F.M.O. Boadilla 'B'" },
-  { playerId: 10, title: 'Duda', text: "Enfermedad, 2-7 días" },
-  { playerId: 3, title: 'Duda', text: "Esguince en el pie, 1-3 semanas" },
   { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 2-4 semanas" },
   { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones" },
-  { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 3-6 semanas" },
+  { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 6-8 semanas" },
   { playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
   { playerId: 19, title: 'Duda', text: "Lesión en los isquios, 4-6 semanas" },
-  { playerId: 21, title: 'Lesión', text: "Lesión de ingle, 1 mes" },
+  { playerId: 21, title: 'Lesión', text: "Lesión de ingle, 5 meses" },
   { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" }
 ];
   
