--- a/InformeJ4.html
+++ b/InformeJ4.html
@@ -835,7 +835,7 @@
           { number: '12', name: 'L. Lausín' }
         ],
         'mediocentros': [
-          { number: '23', name: 'Javi Pardo' }
+          { number: '23', name: 'Javi Pardo' },
           { number: '10', name: 'Kito' },
           { number: '14', name: 'J. Ogayar' }
         ],
