--- a/InformeJ5.html
+++ b/InformeJ5.html
@@ -510,7 +510,7 @@
   <!-- Alineación Probable -->
   <div class="seccion">
     <h3>Alineación Probable</h3>
-    <div class="formacion-titulo">4-3-3</div>
+    <div class="formacion-titulo">4-5-1</div>
 
     <div class="field-container-responsive">
       <div class="field-responsive">
@@ -535,20 +535,20 @@
           { number: '17', name: 'J. Zarcero' }
         ],
         'mediocentros': [
+          { number: '7', name: 'J. Martínez' },
           { number: '10', name: 'Kito' },
           { number: '2', name: 'Á. Brito' },
-          { number: '14', name: 'J. Ogayar' }
+          { number: '14', name: 'J. Ogayar' },
+          { number: '23', name: 'Javi Pardo' }
         ],
         'delanteros': [
-          { number: '7', name: 'J. Martínez' },
-          { number: '24', name: 'H. Panizo' },
-          { number: '23', name: 'Javi Pardo' }
+          { number: '24', name: 'H. Panizo' }
         ]
       };
 
       // Configuraciones de formaciones
       const formations = {
-        '4-3-3': [
+        '4-5-1': [
           playersProbable.delanteros,
           playersProbable.mediocentros,
           playersProbable.defensas,
@@ -584,7 +584,7 @@
       }
 
       // Renderizar formación para alineación probable
-      renderFormationProbable('4-3-3');
+      renderFormationProbable('4-5-1');
     </script>
   </div>
 
