--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -19,11 +19,10 @@
       --gradient-header: linear-gradient(135deg, #0d7a6f 0%, #38ef7d 100%);
       --gradient-button: linear-gradient(135deg, #0d7a6f 0%, #38ef7d 100%);
       
-      /* Nuevos gradientes para el patrón de 4 colores - mejor contraste */
-      --gradient-color-1: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
-      --gradient-color-2: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);
-      --gradient-color-3: linear-gradient(135deg, #fa709a 0%, #fee140 100%);
-      --gradient-color-4: linear-gradient(135deg, #667eea 0%, #764ba2 100%); /* Cambiado a púrpura oscuro */
+      /* Patrón de 3 colores con excelente contraste */
+      --gradient-color-1: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%); /* Azul celeste */
+      --gradient-color-2: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%); /* Naranja coral */
+      --gradient-color-3: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%); /* Azul violeta oscuro */
       
       --gradient-card: linear-gradient(135deg, #0d7a6f 0%, #38ef7d 100%);
     }
@@ -315,11 +314,10 @@
       border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
-    /* Patrón de colores cada 4 jornadas */
+    /* Patrón de colores cada 3 jornadas */
     .match-item.color-1 { background: var(--gradient-color-1); }
     .match-item.color-2 { background: var(--gradient-color-2); }
     .match-item.color-3 { background: var(--gradient-color-3); }
-    .match-item.color-4 { background: var(--gradient-color-4); }
 
     .match-item:hover {
       transform: scale(1.05);
@@ -454,12 +452,12 @@
       {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0, 8]},
       {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27, 0]},
       {nombre: "S. Griñán", goles: 2, asistencias: 0, minutos: [45, 90, 63, 45]}
-  ];
+    ];
 
-    // Función para obtener la clase de color según el índice de la jornada
+    // Función para obtener la clase de color según el índice de la jornada (patrón de 3)
     function obtenerClaseColor(indiceJornada) {
-      const patronColores = ['color-1', 'color-2', 'color-3', 'color-4'];
-      return patronColores[indiceJornada % 4];
+      const patronColores = ['color-1', 'color-2', 'color-3'];
+      return patronColores[indiceJornada % 3];
     }
 
     // Generar las tarjetas de los jugadores
