--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -148,7 +148,14 @@
 </header>
 
 <section class="timeline">
-
+  <div class="card">
+    <img src="Jornada4.jpg" alt="Jornada 4">
+    <div class="info">
+      <h2>Jornada 4</h2>
+      <a href="https://forms.gle/aVyq61K58JMMntJaA" target="_blank">Votación</a>
+    </div>
+  </div>
+  
   <div class="card">
     <img src="Jornada3.jpg" alt="Jornada 3">
     <div class="info">
@@ -161,7 +168,7 @@
     <img src="Jornada2.jpg" alt="Jornada 2">
     <div class="info">
       <h2>Jornada 2</h2>
-      <a href="https://forms.gle/zKmHniJWq751EZVi6" target="_blank">Votación</a>
+      <a href="MVP_J2.html" target="_blank">Ver Resultados</a>
     </div>
   </div>
 
