--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -142,7 +142,7 @@ const players = [
     {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
-  { id:7, name:'Jacobo', pos:'Defensa', status:'Lesionado', performances:[
+  { id:7, name:'Jacobo', pos:'Defensa', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:4, minutes:63, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
@@ -282,7 +282,7 @@ const news = [
   { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 Puerta de Madrid 'B'" },
   { playerId: 15, title: 'Duda', text: "Enfermedad, 1-2 semanas" },
   { playerId: 8, title: 'Lesión', text: "Pubalgia, 2-3 semanas" },
-  { playerId: 7, title: 'Lesión', text: "Molestias en los hombros, 2 semanas" },
+  { playerId: 7, title: 'Duda', text: "Molestias en los hombros, 2 semanas" },
   { playerId: 24, title: 'Lesión', text: "Edema óseo, 2-3 semanas" },
   { playerId: 9, title: 'Duda', text: "Molestias en el talón, 2-15 días" },
   { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo 4-2 E.F.M.O. Boadilla 'B'" },
