--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -241,7 +241,7 @@ const players = [
     {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'-'}
   ]},
   
-  { id:21, name:'Rodri de Castro', pos:'Atacante', status:'Lesionado', performances:[
+  { id:21, name:'Rodri de Castro', pos:'Atacante', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -291,7 +291,7 @@ const news = [
   { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 6-8 semanas" },
   { playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
   { playerId: 19, title: 'Duda', text: "Lesión en los isquios, 4-6 semanas" },
-  { playerId: 21, title: 'Lesión', text: "Lesión de ingle, 5 meses" },
+  { playerId: 21, title: 'Duda', text: "Lesión de ingle, 5 meses" },
   { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" }
 ];
   
