--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -961,17 +961,17 @@
 
     // 📰 Noticias del equipo
     const news = [
-      { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 Puerta de Madrid 'B'" },
+      { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 Puerta de Madrid 'B'", link: 'InformeJ4.html' },
       { playerId: 15, title: 'Duda', text: "Enfermedad, 1-2 semanas" },
       { playerId: 8, title: 'Lesión', text: "Pubalgia, 2-3 semanas" },
       { playerId: 7, title: 'Duda', text: "Molestias en los hombros, 2 semanas" },
       { playerId: 24, title: 'Lesión', text: "Edema óseo, 2-3 semanas" },
-      { playerId: 9, title: 'Duda', text: "Molestias en el talón, 2-15 días" },
-      { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo 4-2 E.F.M.O. Boadilla 'B'" },
+      { playerId: 9, title: 'Duda', text: "Molestias en el talón, 20-30 días" },
+      { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo 4-2 E.F.M.O. Boadilla 'B'", link: 'InformeJ3.html' },
       { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 2-4 semanas" },
-      { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones" },
+      { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones", link: 'InformeJ2.html' },
       { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 6-8 semanas" },
-      { playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
+      { playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'", link: 'InformeJ1.html' },
       { playerId: 19, title: 'Duda', text: "Lesión en los isquios, 4-6 semanas" },
       { playerId: 21, title: 'Duda', text: "Lesión de ingle, 5 meses" },
       { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" }
