--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -974,7 +974,7 @@
       //{ playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
       { playerId: 19, title: 'Duda', text: "Lesión en los isquios, 4-6 semanas" },
       { playerId: 21, title: 'Duda', text: "Lesión de ingle, 5 meses" },
-      { playerId: null, title: 'Jornada 1', text: '<a href="InformeJ1.html">Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'</a>' }
+      { playerId: null, title: 'Jornada 1', text: '<a href="InformeJ1.html">Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'</a>' },
       { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" }
     ];
 
