--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1053,24 +1053,22 @@
     }
     
     function renderInjuryFeed(){
-  const feed = document.getElementById('injuryFeed');
-  feed.innerHTML = '';
+      const feed = document.getElementById('injuryFeed');
+      feed.innerHTML = '';
 
-  news.forEach(n => {
-    const playerName = n.playerId ? players.find(p => p.id === n.playerId)?.name || '' : '';
-    const div = document.createElement('div');
-    div.className = 'p-2 bg-slate-800 rounded text-sm';
+      // Solo mostrar noticias generales (sin jugador vinculado)
+      const generalNews = news.filter(n => n.playerId === null);
 
-    // Permite que el texto incluya <a> y se abra en nueva pestaña
-    const safeText = n.text.replace(/<a /g, '<a target="_blank" rel="noopener noreferrer" ');
-
-    div.innerHTML = `
-      <div class="font-medium">${n.title}${playerName ? ': ' + playerName : ''}</div>
-      <div class="text-slate-400 text-xs">${safeText}</div>
-    `;
-    feed.appendChild(div);
-  });
-}
+      generalNews.forEach(n => {
+        const div = document.createElement('div');
+        div.className = 'news-item';
+        div.innerHTML = `
+          <div class="news-title">${n.title}</div>
+          <div class="news-text">${n.text}</div>
+        `;
+        feed.appendChild(div);
+      });
+    }
 
     
     function render(){
