--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -971,10 +971,9 @@
       { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 2-4 semanas" },
       { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones", link: 'InformeJ2.html' },
       { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 6-8 semanas" },
-      //{ playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
+      { playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
       { playerId: 19, title: 'Duda', text: "Lesión en los isquios, 4-6 semanas" },
       { playerId: 21, title: 'Duda', text: "Lesión de ingle, 5 meses" },
-      { playerId: null, title: 'Jornada 1', text: "<a href="InformeJ1.html">Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'</a>" },
       { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" }
     ];
 
