--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -876,7 +876,7 @@
       { id:14, name:'Kito', pos:'Centrocampista', status:'OK', performances:[
         {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
         {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
-        {points:7, goals:0, assists:1, cards:1, comment:'🟨↪️🅰️ (7,2+🅰️)'},
+        {points:7, minutes:70, goals:0, assists:1, cards:1, comment:'🟨↪️🅰️ (7,2+🅰️)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
       
