--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -160,7 +160,7 @@
     <img src="Jornada3.jpg" alt="Jornada 3">
     <div class="info">
       <h2>Jornada 3</h2>
-      <a href="https://forms.gle/GMNCJfzHejUypXAZ9" target="_blank">Votación</a>
+      <a href="MVP_J3.html" target="_blank">Ver Resultados</a>
     </div>
   </div>
 
