--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -880,7 +880,7 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
       
-      { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'Duda', performances:[
+      { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', performances:[
         {points:2, minutes:21, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:4, minutes:63, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,8)'},
@@ -962,7 +962,6 @@
     // 📰 Noticias del equipo
     const news = [
       { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 Puerta de Madrid 'B'", url: 'InformeJ4.html' },
-      { playerId: 15, title: 'Duda', text: "Enfermedad, 1-2 semanas" },
       { playerId: 8, title: 'Lesión', text: "Pubalgia, 2-3 semanas" },
       { playerId: 7, title: 'Duda', text: "Molestias en los hombros, 2 semanas" },
       { playerId: 24, title: 'Lesión', text: "Edema óseo, 2-3 semanas" },
