--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -148,6 +148,14 @@
 </header>
 
 <section class="timeline">
+<div class="card">
+    <img src="Jornada5.jpg" alt="Jornada 5">
+    <div class="info">
+      <h2>Jornada 5</h2>
+      <a href="https://forms.gle/9XB3BTNkMgttgJwr5" target="_blank">Votación</a>
+    </div>
+  </div>
+  
   <div class="card">
     <img src="Jornada4.jpg" alt="Jornada 4">
     <div class="info">
