--- a/InformeJ5.html
+++ b/InformeJ5.html
@@ -796,31 +796,31 @@
       <div class="cambio">
         <span class="minuto">68'</span>
         <div class="jugadores-cambio">
-          <span>J. Zarcero</span>
+          <span>Adriano</span>
           <span class="flecha">→</span>
-          <span>L. Lausín</span>
+          <span>Á. Infante</span>
         </div>
       </div>
       <div class="cambio">
         <span class="minuto">68'</span>
         <div class="jugadores-cambio">
-          <span>J. Zarcero</span>
+          <span>Kito</span>
           <span class="flecha">→</span>
-          <span>L. Lausín</span>
+          <span>Mario</span>
         </div>
       </div>
       <div class="cambio">
         <span class="minuto">68'</span>
         <div class="jugadores-cambio">
-          <span>J. Zarcero</span>
+          <span>H. Panizo</span>
           <span class="flecha">→</span>
-          <span>L. Lausín</span>
+          <span>Manu Medina</span>
         </div>
       </div>
       <div class="cambio">
         <span class="minuto">69'</span>
         <div class="jugadores-cambio">
-          <span>J. Zarcero</span>
+          <span>Javi Pardo</span>
           <span class="flecha">→</span>
           <span>L. Lausín</span>
         </div>
@@ -831,7 +831,7 @@
   <!-- Once Final -->
   <div class="seccion">
     <h3>Once Final</h3>
-    <div class="formacion-titulo">4-3-3</div>
+    <div class="formacion-titulo">3-5-2</div>
 
     <div class="field-container-responsive">
       <div class="field-responsive">
@@ -847,21 +847,21 @@
       // Datos de los jugadores organizados por posición - ONCE FINAL
       const playersFinal = {
         'portero': [
-          { number: '13', name: 'Álvaro' }
+          { number: '1', name: 'Gabri' }
         ],
         'defensas': [
           { number: '16', name: 'Luisja' },
-          { number: '5', name: 'Adriano' },
+          { number: '4', name: 'Á. Infante' },
           { number: '6', name: 'Rafa' },
-          { number: '12', name: 'L. Lausín' }
         ],
         'mediocentros': [
-          { number: '23', name: 'Javi Pardo' },
-          { number: '10', name: 'Kito' },
-          { number: '14', name: 'J. Ogayar' }
+          { number: '12', name: 'L. Lausín' },
+          { number: '2', name: 'Á. Brito' },
+          { number: '21', name: 'Víctor Jaén' },
+          { number: '3', name: 'Mario' },
+          { number: '7', name: 'J. Martínez' }
         ],
         'delanteros': [
-          { number: '7', name: 'J. Martínez' },
           { number: '9', name: 'S. Griñán' },
           { number: '11', name: 'Manu Medina' }
         ]
@@ -869,7 +869,7 @@
 
       // Configuraciones de formaciones
       const formationsFinal = {
-        '4-3-3': [
+        '3-5-2': [
           playersFinal.delanteros,
           playersFinal.mediocentros,
           playersFinal.defensas,
@@ -905,7 +905,7 @@
       }
 
       // Renderizar formación para once final
-      renderFormationFinal('4-3-3');
+      renderFormationFinal('3-5-2');
     </script>
   </div>
 
