--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -504,7 +504,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 1</h1>
-    <div class="resultado-principal">Rayo Majadahonda-Internacional 'B' 1-0 EFMO Boadilla 'B'</div>
+    <div class="resultado-principal">CF Rayo Majadahonda-Internacional 'B' 1-0 EFMO Boadilla 'B'</div>
   </div>
 
   <!-- Alineación Probable -->
@@ -896,6 +896,7 @@
 
 </body>
 </html>
+
 
 
 
