--- a/InformeJ2.html
+++ b/InformeJ2.html
@@ -504,7 +504,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 2</h1>
-    <div class="resultado-principal">EFMO Boadilla 'B' 1-3 F.B. Dptvo. Torrelodones</div>
+    <div class="resultado-principal">EFMO Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones</div>
   </div>
 
   <!-- Alineación Probable -->
