--- a/InformeJ3.html
+++ b/InformeJ3.html
@@ -504,7 +504,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 3</h1>
-    <div class="resultado-principal">Gimnástica Colmenarejo 'B' 4-2 EFMO Boadilla 'B'</div>
+    <div class="resultado-principal">Gimnástica Colmenarejo CF 'B' 4-2 EFMO Boadilla 'B'</div>
   </div>
 
   <!-- Alineación Probable -->
