--- a/InformeJ4.html
+++ b/InformeJ4.html
@@ -504,7 +504,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 4</h1>
-    <div class="resultado-principal">EFMO Boadilla 'B' 0-1 Puerta de Madrid 'B'</div>
+    <div class="resultado-principal">EFMO Boadilla 'B' 0-1 CD Puerta de Madrid 'B'</div>
   </div>
 
   <!-- Alineación Probable -->
