--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -994,12 +994,12 @@
       { playerId: 24, title: 'Lesión', text: "Edema óseo, 3-4 semanas" },
       { playerId: 9, title: 'Duda', text: "Molestias en el talón, 20-30 días" },
       { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo CD 'B' 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ3.html' },
-      { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 2-4 semanas" },
+      { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 3-5 semanas" },
       { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones", url: 'InformeJ2.html' },
       { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 6-8 semanas" },
       { playerId: null, title: 'Jornada 1', text: "CF Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'", url: 'InformeJ1.html' },
       //{ playerId: 19, title: 'Duda', text: "Lesión en los isquios, 4-6 semanas" },
-      { playerId: 21, title: 'Duda', text: "Lesión de abductor, 5 meses" },
+      { playerId: 21, title: 'Duda', text: "Lesión en el abductor, 5 meses" },
       { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" }
     ];
 
