--- a/InformeJ4.html
+++ b/InformeJ4.html
@@ -621,23 +621,23 @@
       // Datos de los jugadores organizados por posición - ALINEACIÓN CONFIRMADA
       const playersConfirmada = {
         'portero': [
-          { number: '13', name: 'Álvaro', rating: '-' }
+          { number: '13', name: 'Álvaro', rating: '7,1' }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja', rating: '-' },
-          { number: '5', name: 'Adriano', rating: '-' },
-          { number: '6', name: 'Rafa', rating: '-' },
-          { number: '17', name: 'J. Zarcero', rating: '-' }
+          { number: '16', name: 'Luisja', rating: '6,9' },
+          { number: '5', name: 'Adriano', rating: '7,0' },
+          { number: '6', name: 'Rafa', rating: '6,0' },
+          { number: '17', name: 'J. Zarcero', rating: '7,4' }
         ],
         'mediocentros': [
-          { number: '23', name: 'J. Pardo', rating: '-' },
-          { number: '2', name: 'Á. Brito', rating: '-' },
-          { number: '14', name: 'J. Ogayar', rating: '-' }
+          { number: '23', name: 'J. Pardo', rating: '6,9' },
+          { number: '2', name: 'Á. Brito', rating: '6,4' },
+          { number: '14', name: 'J. Ogayar', rating: '6,7' }
         ],
         'delanteros': [
-          { number: '7', name: 'J. Martínez', rating: '-' },
-          { number: '24', name: 'H. Panizo', rating: '-' },
-          { number: '20', name: 'A. Molina', rating: '-' }
+          { number: '7', name: 'J. Martínez', rating: '6,6' },
+          { number: '24', name: 'H. Panizo', rating: '6,4' },
+          { number: '20', name: 'A. Molina', rating: '6,5' }
         ]
       };
 
@@ -645,11 +645,11 @@
       const benchPlayers = [
         { number: '1', name: 'Gabri', rating: '-' },
         { number: '4', name: 'Á. Infante', rating: '-' },
-        { number: '12', name: 'L. Lausín', rating: '-' },
-        { number: '10', name: 'Kito', rating: '-' },
+        { number: '12', name: 'L. Lausín', rating: '6,6' },
+        { number: '10', name: 'Kito', rating: '6,8' },
         { number: '3', name: 'Mario', rating: '-' },
-        { number: '11', name: 'Manu Medina', rating: '-' },
-        { number: '9', name: 'S. Griñán', rating: '-' }
+        { number: '11', name: 'Manu Medina', rating: '6,4' },
+        { number: '9', name: 'S. Griñán', rating: '6,1' }
       ];
 
       // Configuraciones de formaciones
