--- a/InformeJ6.html
+++ b/InformeJ6.html
@@ -534,13 +534,13 @@
         ],
         'defensas': [
           { number: '16', name: 'Luisja' },
-          { number: '5', name: 'Adriano' },
+          { number: '15', name: 'Jacobo' },
           { number: '6', name: 'Rafa' },
           { number: '17', name: 'J. Zarcero' }
         ],
         'mediocentros': [
           { number: '7', name: 'J. Martínez' },
-          { number: '10', name: 'Kito' },
+          { number: '14', name: 'J. Ogayar' },
           { number: '2', name: 'Á. Brito' },
           { number: '23', name: 'Javi Pardo' },
           { number: '24', name: 'H. Panizo' }
