--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -92,7 +92,33 @@
         <li>Roja → -6</li>
       </ul>
     </section>
-
+  
+    <!-- Métricas más premiadas -->
+    <section class="mb-10 text-center">
+        <h2 class="text-2xl font-semibold mb-4">Métricas más premiadas por posición</h2>
+        <div class="overflow-x-auto">
+            <table class="w-full border border-gray-200 rounded-xl overflow-hidden shadow text-sm text-center">
+                <thead class="bg-blue-100">
+                <tr><th class="p-3">Posición</th><th class="p-3">Métricas más premiadas</th></tr>
+                </thead>
+                <tbody class="divide-y divide-gray-200">
+                <tr><td class="p-3 font-medium">Porteros</td>
+                    <td class="p-3">Paradas, salidas, despejes de puños</td></tr>
+                <tr><td class="p-3 font-medium">Centrales</td>
+                    <td class="p-3">Duelos ganados, despejes, recuperaciones, tiros bloqueados</td></tr>
+                <tr><td class="p-3 font-medium">Laterales</td>
+                    <td class="p-3">Recuperaciones, centros precisos, progresión ofensiva</td></tr>
+                <tr><td class="p-3 font-medium">Pivotes</td>
+                    <td class="p-3">Pases completados, recuperaciones, duelos ganados</td></tr>
+                <tr><td class="p-3 font-medium">Mediocentros / bandas</td>
+                    <td class="p-3">Goles, asistencias, pases clave, regates exitosos, progresión ofensiva</td></tr>
+                <tr><td class="p-3 font-medium">Delanteros</td>
+                    <td class="p-3">Goles, tiros a puerta, duelos ganados</td></tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+  
     <!-- Acciones relevantes -->
     <section class="mb-10 text-center">
       <h2 class="text-2xl font-semibold mb-4">Acciones relevantes</h2>
