--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -76,7 +76,7 @@
           <tr><td class="p-2">5.8 – 5.9</td><td class="p-2">-1</td></tr>
           <tr><td class="p-2">5.4 – 5.7</td><td class="p-2">-2</td></tr>
           <tr><td class="p-2">5.0 – 5.3</td><td class="p-2">-3</td></tr>
-          <tr><td class="p-2">0 – 4.9</td><td class="p-2">-4</td></tr>
+          <tr><td class="p-2">3.0 – 4.9</td><td class="p-2">-4</td></tr>
         </tbody>
       </table>
 
@@ -109,7 +109,7 @@
                 <tr><td class="p-3 font-medium">Laterales</td>
                     <td class="p-3">Recuperaciones, centros precisos, progresión ofensiva</td></tr>
                 <tr><td class="p-3 font-medium">Pivotes</td>
-                    <td class="p-3">Pases completados, recuperaciones, duelos ganados</td></tr>
+                    <td class="p-3">Precisión de pase, recuperaciones, duelos ganados</td></tr>
                 <tr><td class="p-3 font-medium">Mediocentros / bandas</td>
                     <td class="p-3">Goles, asistencias, pases clave, regates exitosos, progresión ofensiva</td></tr>
                 <tr><td class="p-3 font-medium">Delanteros</td>
