--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -883,7 +883,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
         {points:7, minutes:71, goals:0, assists:0, cards:0, comment:'↪️ (7,4)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ -'}
+        {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'}
       ]},
       
       { id:14, name:'Kito', pos:'Centrocampista', status:'OK', performances:[
@@ -940,7 +940,7 @@
         {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,7)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ -'}
+        {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,6)'}
       ]},
       
       { id:21, name:'Rodri de Castro', pos:'Atacante', status:'Duda', performances:[
