--- a/InformeJ5.html
+++ b/InformeJ5.html
@@ -632,13 +632,13 @@
           { number: '16', name: 'Luisja', rating: '-' },
           { number: '5', name: 'Adriano', rating: '-' },
           { number: '6', name: 'Rafa', rating: '-' },
-          { number: '17', name: 'J. Zarcero', rating: '-' }
+          { number: '17', name: 'J. Zarcero', rating: '6,7' }
         ],
         'mediocentros': [
           { number: '7', name: 'J. Martínez', rating: '-' },
           { number: '23', name: 'J. Pardo', rating: '-' },
           { number: '10', name: 'Kito', rating: '-' },
-          { number: '14', name: 'J. Ogayar', rating: '-' },
+          { number: '14', name: 'J. Ogayar', rating: '6,6' },
           { number: '24', name: 'H. Panizo', rating: '-' }
         ],
         'delanteros': [
