--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -109,7 +109,7 @@
                 <tr><td class="p-3 font-medium">Laterales</td>
                     <td class="p-3">Recuperaciones, centros precisos, progresión ofensiva</td></tr>
                 <tr><td class="p-3 font-medium">Pivotes</td>
-                    <td class="p-3">Precisión de pase, recuperaciones, duelos ganados</td></tr>
+                    <td class="p-3">Recuperaciones, duelos ganados</td></tr>
                 <tr><td class="p-3 font-medium">Mediocentros / bandas</td>
                     <td class="p-3">Goles, asistencias, pases clave, regates exitosos, progresión ofensiva</td></tr>
                 <tr><td class="p-3 font-medium">Delanteros</td>
