--- a/InformeJ5.html
+++ b/InformeJ5.html
@@ -630,16 +630,16 @@
         ],
         'defensas': [
           { number: '16', name: 'Luisja', rating: '-' },
-          { number: '5', name: 'Adriano', rating: '-' },
+          { number: '5', name: 'Adriano', rating: '7,6' },
           { number: '6', name: 'Rafa', rating: '-' },
           { number: '17', name: 'J. Zarcero', rating: '6,7' }
         ],
         'mediocentros': [
           { number: '7', name: 'J. Martínez', rating: '-' },
           { number: '23', name: 'J. Pardo', rating: '-' },
-          { number: '10', name: 'Kito', rating: '-' },
+          { number: '10', name: 'Kito', rating: '6,5' },
           { number: '14', name: 'J. Ogayar', rating: '6,6' },
-          { number: '24', name: 'H. Panizo', rating: '-' }
+          { number: '24', name: 'H. Panizo', rating: '7,2' }
         ],
         'delanteros': [
           { number: '9', name: 'S. Griñán', rating: '-' }
