--- a/InformeJ5.html
+++ b/InformeJ5.html
@@ -636,7 +636,7 @@
         ],
         'mediocentros': [
           { number: '7', name: 'J. Martínez', rating: '-' },
-          { number: '23', name: 'J. Pardo', rating: '-' },
+          { number: '23', name: 'J. Pardo', rating: '6,9' },
           { number: '10', name: 'Kito', rating: '6,5' },
           { number: '14', name: 'J. Ogayar', rating: '6,6' },
           { number: '24', name: 'H. Panizo', rating: '7,2' }
