--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -924,7 +924,7 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'},
-        {points:null, minutes:69, goals:0, assists:0, cards:0, comment:'↪️ -'}
+        {points:4, minutes:69, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'}
       ]},
       
       { id:19, name:'Mario', pos:'Centrocampista', status:'OK', performances:[
