--- a/InformeJ5.html
+++ b/InformeJ5.html
@@ -626,35 +626,35 @@
       // Datos de los jugadores organizados por posición - ALINEACIÓN CONFIRMADA
       const playersConfirmada = {
         'portero': [
-          { number: '1', name: 'Gabri', rating: '-' }
+          { number: '1', name: 'Gabri', rating: '7,7' }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja', rating: '-' },
+          { number: '16', name: 'Luisja', rating: '7,0' },
           { number: '5', name: 'Adriano', rating: '7,6' },
-          { number: '6', name: 'Rafa', rating: '-' },
+          { number: '6', name: 'Rafa', rating: '8,2' },
           { number: '17', name: 'J. Zarcero', rating: '6,7' }
         ],
         'mediocentros': [
-          { number: '7', name: 'J. Martínez', rating: '-' },
+          { number: '7', name: 'J. Martínez', rating: '7,0' },
           { number: '23', name: 'J. Pardo', rating: '6,9' },
           { number: '10', name: 'Kito', rating: '6,5' },
           { number: '14', name: 'J. Ogayar', rating: '6,6' },
           { number: '24', name: 'H. Panizo', rating: '7,2' }
         ],
         'delanteros': [
-          { number: '9', name: 'S. Griñán', rating: '-' }
+          { number: '9', name: 'S. Griñán', rating: '7,0' }
         ]
       };
 
       // Datos del banquillo
       const benchPlayers = [
         { number: '13', name: 'Álvaro', rating: '-' },
-        { number: '4', name: 'Á. Infante', rating: '-' },
-        { number: '2', name: 'Á. Brito', rating: '-' },
-        { number: '3', name: 'Mario', rating: '-' },
-        { number: '21', name: 'Víctor Jaén', rating: '-' },
-        { number: '12', name: 'L. Lausín', rating: '-' },
-        { number: '11', name: 'Manu Medina', rating: '-' }
+        { number: '4', name: 'Á. Infante', rating: '7,2' },
+        { number: '2', name: 'Á. Brito', rating: '7,5' },
+        { number: '3', name: 'Mario', rating: '7,3' },
+        { number: '21', name: 'Víctor Jaén', rating: '6,8' },
+        { number: '12', name: 'L. Lausín', rating: '6,7' },
+        { number: '11', name: 'Manu Medina', rating: '6,4' }
       ];
 
       // Configuraciones de formaciones
